--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.earshot.project.main.MainActivity"
+            android:screenOrientation="portrait"
             android:launchMode="singleTask"
             android:label="@string/app_name" >
             <intent-filter>
@@ -47,6 +48,7 @@
         </activity>
         <activity
             android:name="com.spotify.sdk.android.authentication.LoginActivity"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
     </application>
 
